src/main/resources/static/style.css
body {
  font-family: "Quicksand", sans-serif;
  margin: 0;
}

nav {
  background-color: #f4f1de;
  font-size: 1.5em;
  text-decoration: none;
  display: flex;
  justify-content: space-between;
  padding: 0.3em;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.navbar > ul,
li {
  display: inline;
  margin: 0;
  padding: 0;
}

.navbar > ul {
  flex: 1;
  max-width: 50%;
  display: flex;
  justify-content: space-evenly;
}

.navbar a {
  text-decoration: none;
  color: black;
  margin-left: 1rem;
}

.iconContainer {
  display: flex;
  align-items: center;
}

.iconContainer span {
  padding-right: 0.1rem;
}

.iconContainer::before {
  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
}

.iconContainer:hover {
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
}

h1 {
  font-family: "Architects Daughter";
  font-style: normal;
  color: #14213d;
}

h2 {
  text-align: center;
  color: #2f3e46;
}

.intro {
  background-image: url("./images/ella-olsson-C1Q3qOTlegg-unsplash.jpg");
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  min-height: 350px;
  max-height: 600px;
  background-attachment: fixed;
}

.mealInro {
  background-image: url("./images/madie-hamilton-Q9yr-cvJr30-unsplash.jpg");
  justify-content: space-evenly;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  min-height: 350px;
  max-height: 600px;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.mealInro h1 {
  color: white;
  text-shadow: 2px 2px 3px #000;
}

.mealInro label {
  align-content: center;
}

.mealInro #search {
  background-color: white;
}

.planInro {
  background-image: url("./images/todd-quackenbush-x5SRhkFajrA-unsplash.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  min-height: 350px;
  max-height: 600px;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.planInro h1 {
  color: white;
}

.planInro .sketchy {
  /* color: white; */
  background-color: white;
}

.banner h1 {
  font-size: 2em;
  text-align: center;
  padding-top: 120px;
}

.banner p {
  font-size: 1.4em;
}

.credit {
  margin-right: 1rem;
  text-align: right;
  margin-bottom: 1rem;
}

.credit,
.credit > a {
  text-decoration: none;
  color: #52796f;
  font-size: 0.8rem;
}

.mainSection {
  .borderBox li {
    display: block;
    width: 60%;
    min-width: 200px;
    max-width: 230px;
    padding: 80px 20px 40px;
    position: relative;
    margin: 10px;
    min-height: 18vh;
    text-align: left;
    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
    transform: rotate(-6deg);
  }

  ul li:nth-child(even) {
    transform: rotate(4deg);
    position: relative;
    top: 5px;
    background: #ffc;
  }

  ul li:nth-child(odd) {
    transform: rotate(-3deg);
    position: relative;
    top: -5px;
    /* background: #ccf; */
    background: #e2f0b7;
  }

  ul li:hover,
  ul li :focus {
    box-shadow: 10px 10px 7px rgba(0, 0, 0, 0.7);
    transform: scale(1.1);
    position: relative;
    z-index: 5;
  }

  ul li {
    text-decoration: none;
    color: #000;
    background: #ffc;
    display: block;
    height: 10em;
    width: 10em;
    padding: 1em;
    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
    transition: transform 0.15s linear;
  }

  ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }

  .borderBox li h3 {
    font-family: "Architects Daughter";
    font-size: 114px;
    margin: 0;
    position: absolute;
    opacity: 0.2;
    top: 10px;
    right: 15px;
  }
}

.sketchy {
  align-self: center;
  background-color: transparent;
  background-position: 0 90%;
  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
  border-style: solid;
  border-width: 2px;
  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
  box-sizing: border-box;
  color: #41403e;
  cursor: pointer;
  display: inline-block;
  font-family: "Architects Daughter", cursive;
  font-size: 1rem;
  line-height: 23px;
  padding: 0.5rem;
  transition: all 235ms ease-in-out;
  border-bottom-left-radius: 15px 255px;
  border-bottom-right-radius: 225px 15px;
  border-top-left-radius: 255px 15px;
  border-top-right-radius: 15px 225px;
  touch-action: manipulation;
}

.sketchy a {
  text-decoration: none;
  color: black;
}

.sketchy:hover {
  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px -5px;
  transform: translate3d(0, 2px, 0);
}

.sketchy:focus {
  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
}

.mainMeals {
  padding-left: 3rem;
  padding-right: 2rem;
  margin-top: 3rem;
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  gap: 10px 20px; /* row-gap column gap */

  /* justify-content: space-around; */
}

.column1 {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 2;
}

.column2 {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
}

#mainSection,
#dataTable,
#weekyPlan {
  min-height: 600px;
}

table {
  width: 90%;
  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
  border-style: solid;
  border-width: 2px;
  box-sizing: border-box;
  color: #41403e;
  margin-left: 2rem;
  margin-right: 2rem;
}

table td,
th {
  border-top: 1px #41403e solid;
  border-bottom: 1px #41403e solid;
  border-radius: 3px;
  padding: 1rem;
}

#done {
  display: none;
}

.addNew {
  background: #ffc;
  display: block;
  width: 350px;
  min-width: 250px;
  padding: 10px;
  margin-top: 5rem;
  min-height: 18vh;
  max-height: 55vh;
  text-align: left;
  box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
  transform: rotate(-2deg);
  position: absolute;
}

#newMealForm,
#typePerWeek {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  margin-bottom: 1rem;
}

#newMealForm > ul li > #mealName,
label {
  display: flex;
  flex-direction: column;
  flex-flow: column wrap;
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

#search,
#mealName,
#mealCategory {
  width: 250px;
}

#submitBtn {
  align-self: center;
  background-color: transparent;
  background-position: 0 90%;
  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
  border-style: solid;
  border-width: 2px;
  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
  box-sizing: border-box;
  color: #41403e;
  cursor: pointer;
  display: inline-block;
  font-family: "Architects Daughter", cursive;
  font-size: 1rem;
  line-height: 23px;
  padding: 0.5rem;
  transition: all 235ms ease-in-out;
  border-bottom-left-radius: 15px 255px;
  border-bottom-right-radius: 225px 15px;
  border-top-left-radius: 255px 15px;
  border-top-right-radius: 15px 225px;
  touch-action: manipulation;
}
#search,
#mealCategory,
#mealName {
  background-color: transparent;
  background-position: 0 90%;
  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
  border-style: solid;
  border-width: 2px;
  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
  box-sizing: border-box;
  color: #41403e;
  cursor: pointer;
  display: inline-block;
  font-family: "Architects Daughter", cursive;
  font-size: 1rem;
  line-height: 23px;
  padding: 0.5rem;
  transition: all 235ms ease-in-out;
  border-bottom-left-radius: 15px 255px;
  border-bottom-right-radius: 225px 15px;
  border-top-left-radius: 255px 15px;
  border-top-right-radius: 15px 225px;
  touch-action: manipulation;
}

.addNew:hover,
.addNew:focus {
  box-shadow: 10px 10px 7px rgba(15, 9, 9, 0.7);
  transform: scale(1);
  position: relative;
  z-index: 5;
}

.addNew > #typePerWeek {
  padding-bottom: 2rem;
}

#weeklyfreq {
  display: flex;
  flex-direction: column;
}

.labelWrap {
  display: inline-block;
  width: 200px;
  text-align: right;
}

.inlineInput {
  display: inline-block;
}

#chicken,
#meat,
#fish,
#vegetarian {
  width: 4rem;
  height: 2rem;
  margin-left: 2rem;
  background: transparent;
  align-self: center;
  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
  border-style: solid;
  border-width: 2px;
  box-shadow: rgba(0, 0, 0, 0.2) 15px 28px 25px -18px;
  box-sizing: border-box;
  color: #41403e;
  cursor: pointer;
  display: inline-block;
  font-family: "Architects Daughter", cursive;
  font-size: 1.5rem;
  line-height: 23px;
  transition: all 235ms ease-in-out;
  border-bottom-left-radius: 15px 255px;
  border-bottom-right-radius: 225px 15px;
  border-top-left-radius: 255px 15px;
  border-top-right-radius: 15px 225px;
  touch-action: manipulation;
}

/* MODAL */
.modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(81 91 116 / 70%);
  z-index: 9999;
  justify-content: center;
  align-items: center;
}

.modalContent {
  width: 100%;
  max-width: 500px;
  position: relative;
  margin: 1rem;
  background: #ffc;
  display: block;
  box-shadow: 7px 7px 10px rgba(33, 33, 33, 0.7);
}

.modalContainer {
  margin: 2rem;
  display: flex;
  flex-direction: column;
}

.close {
  cursor: pointer;
  align-self: end;
  font-size: 1.25rem;
  font-weight: bold;
}

.randomButton {
  display: flex;
  justify-content: center;
}

.randomButton button.sketchy {
  background-color: transparent;
}

.show {
  display: flex;
}

.hide {
  display: none;
}

.refreshHeader {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 3rem;
  margin-bottom: 3rem;
}

#refreshBtn .sketchy {
  background-color: transparent;
  cursor: pointer;
  text-align: center;
  color: #41403e;
}

#addNewWeekly {
  margin-top: 13rem;
}

footer {
  margin-top: 50px;
  text-align: center;
  font-size: small;
  color: white;
  background-color: #2f3e46;
  bottom: 0;
  width: 100%;
  height: 40px;
}

footer ul {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: wrap;
  padding-top: 0.5rem;
}

footer a {
  text-decoration: none;
  color: white;
}

footer ul li,
#icon {
  display: flex;
  align-items: center;
  padding-right: 0.3rem;
}

.gitImage {
  width: 15px;
}

@media (max-width: 768px) {
  .navbar a {
    font-size: 0px;
  }

  footer {
    width: 100%;
  }
}

#doneBtn {
  display: none;
}

